--- a/first/index.css
+++ b/first/index.css
@@ -1,3 +1,9 @@
+body {
+    margin: 0;
+    background: whitesmoke;
+    width: 100%;
+    height:100%;
+}
 .top-gray-header {
     background-color: darkgrey;
     length: 10%;
@@ -10,4 +16,7 @@
 }
 .white-body {
     background-color: white;
+    margin: auto;
+    length: 10vh;
+    width: 75%;
 }
